force-app/main/default/objects/Class_Meeting_Time__c/Class_Meeting_Time__c.object-meta.xml
<CustomObject>
    <label>Class Meeting Time</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Class Meeting Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Meeting Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>