force-app/main/default/objects/Class_Meeting_Time__c/fields/Campus_Location__c.field-meta.xml
<CustomField>
    <fullName>Campus_Location__c</fullName>
    <formula>Class__r.Campus__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus Location</label>
    <type>Text</type>
</CustomField>