force-app/main/default/objects/Class_Meeting_Time__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Class for which this record&apos;s days/times are specified.</description>
    <inlineHelpText>Class for which this record&apos;s days/times are specified.</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Meeting Times</relationshipLabel>
    <relationshipName>Class_Meeting_Times1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>