force-app/main/default/objects/Class_Meeting_Time__c/fields/Class_Span__c.field-meta.xml
<CustomField>
    <fullName>Class_Span__c</fullName>
    <formula>TEXT( Start_Time__c ) &amp;&apos; - &apos;&amp; TEXT( End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Span</label>
    <type>Text</type>
</CustomField>