force-app/main/default/objects/Class_Meeting_Time__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>