force-app/main/default/objects/Class_Meeting_Time__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT((End_Time__c - Start_Time__c) / 60000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (minutes)</label>
    <type>Text</type>
</CustomField>