force-app/main/default/objects/Class_Meeting_Time__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <formula>Class__r.Teacher__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teacher</label>
    <type>Text</type>
</CustomField>