force-app/main/default/objects/Class_Meeting_Time__c/validationRules/End_Time_Later_Than_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Later_Than_Start_Time</fullName>
    <active>true</active>
    <description>Class must end after it starts.</description>
    <errorConditionFormula>End_Time__c &lt;  Start_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>The class end time cannot be earlier than its start time</errorMessage>
</ValidationRule>