force-app/main/default/objects/Class_Meeting_Time__c/validationRules/Must_Be_During_School_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_During_School_Hours</fullName>
    <active>true</active>
    <description>The class must be scheduled during school hours (i.e. 8am - 2pm)</description>
    <errorConditionFormula>OR( Start_Time__c &lt; TIMEVALUE(&quot;8:00:00.000&quot;), End_Time__c &gt; TIMEVALUE(&quot;14:00:00.000&quot;) )</errorConditionFormula>
    <errorMessage>The class must be scheduled during school hours (8am - 2pm).</errorMessage>
</ValidationRule>